Fix banner cut off

--- a/bootstrap/less/hs-responsive-480px-max.less
+++ b/bootstrap/less/hs-responsive-480px-max.less
@@ -122,6 +122,7 @@
   }
 
   .banner-review blockquote {
+    min-width: 0;
     p, p.banner-author {
       font-size: @baseFontSize*1.5;
       line-height: @baseLineHeight*1.5;
