--- a/css/theme-responsive.css
+++ b/css/theme-responsive.css
@@ -1533,6 +1533,9 @@
     max-width: 100%;
     height: 280px;
   }
+  .banner-review blockquote {
+    min-width: 0;
+  }
   .banner-review blockquote p,
   .banner-review blockquote p.banner-author {
     font-size: 24px;
